<resources>
    <string name="app_name">K-Jur Seller</string>
    <string name="please_wait">Please wait. . .</string>
    <string name="please_signin">Please sign in to continue.</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password_u"><u>Forgot Password</u></string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_info">Please enter your registered Email Address to reset your password.</string>
    <string name="products">Products</string>
    <string name="sold">Sold</string>
    <string name="income">Income</string>
    <string name="location">Location</string>
    <string name="report">Report</string>
    <string name="item">Item</string>
    <string name="remain">Remain</string>
    <string name="total">Total</string>
    <string name="daily_sale">Daily Sale</string>
    <string name="open_store">Open Store</string>
    <string name="live_report">Live Report</string>
    <string name="live_sales">Live Sales</string>
    <string name="update_stock">Update Stock</string>
    <string name="close_store">Close Store</string>
    <string name="settings">Settings</string>
    <string name="profiles">Profiles</string>
    <string name="bank_info">Bank Information</string>
    <string name="change_password">Change Password</string>
    <string name="languages">Languages</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="birth_date">Birth Date</string>
    <string name="choose_bank">Choose Bank</string>
    <string name="account_number_bank">Bank Account Number</string>
    <string name="holder_name_bank">Bank Holder\'s Name</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="new_confirm_password">Confirm New Password</string>
    <string name="confirmation">Confirmation</string>
    <string name="are_you_sure_logout">Are you sure you want to log out?</string>
    <string name="close_all"><u>Close All</u></string>
    <string name="are_you_sure_close_store">Are you sure you want to close your store in </string>
    <string name="are_you_sure_close_item">Are you sure you want to close your product </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="terms_condition">Terms and Conditions</string>
    <string name="version">Version</string>
    <string name="gamapay">Gamapay</string>
    <string name="balance">Balance</string>
    <string name="account_number">Account Number:</string>
    <string name="scan">Scan</string>
    <string name="top_up">Top Up</string>
    <string name="no_info">No Information Available</string>
    <string name="tap_to_edit">(tap to edit)</string>
    <string name="withdraw">Withdraw</string>
    <string name="withdraw_amount">Withdraw Amount</string>
    <string name="send">Send</string>
    <string name="price">Price</string>
    <string name="stock">Stock</string>
    <string name="add_stock">Add Stock</string>
    <string name="current_stock">Current Stock:</string>
    <string name="confirm">Confirm</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="date_information">(Date Format : Year-Month-Day)</string>
    <string name="search">Search</string>
    <string name="verify_email">Verify Your Email</string>
    <string name="otp_sent_to">A One Time Password (OTP) has been sent to</string>
    <string name="submit">Submit</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="test">The quick brown fox jumps overs the lazy dog</string>
</resources>
