<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/loginbg"
    tools:context="com.komsi.lab.kjurseller.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/sfnsdisplay"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="28.6sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/maven_pro_regular"
            android:text="@string/please_signin"
            android:textColor="#444444"
            android:textSize="16sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            app:errorTextAppearance="@style/ErrorText"
            app:hintTextAppearance="@style/HintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:textColor="@color/gray" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/ErrorText"
            app:hintTextAppearance="@style/HintText"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimaryLight">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/gray" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tvForgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/forgot_password_u"
            android:textColor="@color/gray"
            android:textSize="14sp" />

        <FrameLayout
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/circle"
                android:tint="@color/colorPrimary" />

            <ImageView
                android:layout_width="45dp"
                android:layout_height="25dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="22dp"
                android:src="@drawable/whitearrow" />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>
