<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.komsi.lab.kjurseller.WithdrawActivity">

    <include layout="@layout/toolbar_withdraw" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c2c4ca" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="12dp"
        android:text="@string/bank_info"
        android:textSize="15sp"
        android:fontFamily="@font/roboto_bold"/>

    <LinearLayout
        android:id="@+id/layoutBankInfo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="9dp"
        android:background="@drawable/corner_layout"
        android:foreground="?attr/selectableItemBackground"
        android:clickable="true"
        android:elevation="5dp"
        android:focusable="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bankcard"
            android:gravity="center|end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNoInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:fontFamily="@font/maven_pro_regular"
                android:text="@string/no_info"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/tvHolderName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:fontFamily="@font/maven_pro_regular"
                android:text="Afyad Kafa"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tvHolderBankNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:fontFamily="@font/open_sans_regular"
                android:text="180001999855"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:visibility="gone"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:fontFamily="@font/maven_pro_regular"
                android:text="@string/tap_to_edit"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/balance"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="Rp"
            android:fontFamily="@font/roboto_light"/>

        <TextView
            android:id="@+id/tvBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="23sp"
            android:text="0"
            android:fontFamily="@font/open_sans_regular"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="20dp"
        android:text="@string/withdraw_amount"
        android:textSize="15sp"
        android:fontFamily="@font/roboto_bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="Rp"
            android:fontFamily="@font/roboto_light"/>

        <EditText
            android:id="@+id/etAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:inputType="number"/>
    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btnWithdraw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/withdraw"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:theme="@style/PrimaryButton" />
</LinearLayout>
