<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.komsi.lab.kjurseller.VerifyEmailActivity">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="210dp"
        android:layout_gravity="end"
        android:layout_marginEnd="15dp"
        android:src="@drawable/verify_email_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/maven_pro_medium"
            android:text="@string/verify_email"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/otp_sent_to"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="email***@gmail.com"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etOTP"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:backgroundTint="@color/white" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/submit"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:theme="@style/PrimaryWhiteButton" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnResend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/roboto_light"
                android:text="@string/resend_otp"
                android:textColor="@color/light_grey"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:text="("
                    android:textColor="@color/light_grey"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:text="60"
                    android:textColor="@color/light_grey"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:text=")"
                    android:textColor="@color/light_grey"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
